# hexlet_pytest

./: pyproject.toml
hexlet_pytest/tests/: test_stack.py
